--- a/ui/layout.htm
+++ b/ui/layout.htm
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<base href="{{ @SCHEME.'://'.@HOST.@BASE.'/' }}" />
+	<!--<base href="{{ @SCHEME.'://'.@HOST.@BASE.'/' }}" />-->
 	<meta charset="{{ @ENCODING }}" />
 	<title>ediY</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="description" content=" @meta-descrition " />
 	<meta name="keywords" content=" @meta-content " />
-	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/skel.min.js"></script>
-	<script src="js/skel-layers.min.js"></script>
-	<script src="js/init.js"></script>
+	<!--[if lte IE 8]><script src="/css/ie/html5shiv.js"></script><![endif]-->
+	<script src="/js/jquery.min.js"></script>
+	<script src="/js/skel.min.js"></script>
+	<script src="/js/skel-layers.min.js"></script>
+	<script src="/js/init.js"></script>
 	<noscript>
-		<link rel="stylesheet" href="css/skel.css" />
-		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/style-desktop.css" />
-		<link rel="stylesheet" href="css/style-wide.css" />
+		<link rel="stylesheet" href="/css/skel.css" />
+		<link rel="stylesheet" href="/css/style.css" />
+		<link rel="stylesheet" href="/css/style-desktop.css" />
+		<link rel="stylesheet" href="/css/style-wide.css" />
 	</noscript>
-	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="/css/ie/v8.css" /><![endif]-->
 </head>
 	<body class="left-sidebar">
 		<div class="toolbar desktop">
